# Group-Messenger

./: CMakeLists.txt  ClientEntry.cpp  ClientEntry.h  ControlMessage.cpp  ControlMessage.h  Group.cpp  Group.h  GroupMessage.cpp  GroupMessage.h  Makefile  README.md  Report.docx  TCPClient.cpp  TCPClient.h  TCPServer.cpp  client.cpp  common.h  main_test_cereal.cpp
